--- a/package.json
+++ b/package.json
@@ -8,8 +8,27 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/geojson": "^7946.0.7",
+    "@types/react-redux": "^7.1.9",
+    "axios": "^0.20.0",
+    "d3": "^6.2.0",
+    "leaflet": "^1.7.1",
     "next": "9.5.3",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-icons": "^3.11.0",
+    "react-leaflet": "^2.7.0",
+    "react-leaflet-universal": "^2.2.1",
+    "react-redux": "^7.2.1",
+    "react-world-flags": "^1.4.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
+  },
+  "devDependencies": {
+    "@types/d3": "^5.9.2",
+    "@types/node": "^14.11.2",
+    "@types/react": "^16.9.49",
+    "@types/react-world-flags": "^1.4.0",
+    "typescript": "^4.0.3"
   }
 }
